--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -587,6 +587,9 @@ nav li > input {
 .padlist input[type="button"] {
 	min-width: 6em;
 }
+.padlist td.nopodcasts {
+  text-align: left;
+}
 .load {
 	max-width: 15em;
 	margin: 0 auto;
