--- a/app/views/document.html
+++ b/app/views/document.html
@@ -1,2 +1,117 @@
-Dokument:
-<h1>{{name}}</h1>
+<div class="document-wrapper">
+
+	<div class="document">
+
+		<div class="document-header">
+
+			<div class="document-meta">
+
+				<h2>Not Safe For Work <span>{{name}}</span></h2>
+				<h3>16.07.2014, 13:37 Uhr</h3>
+
+				<form class="sighting">
+					<input type="submit" value="Version sichten" />
+					<!-- <input type="submit" value="Sichtung beantragen" /> -->
+				</form>
+
+			</div>
+
+			<div class="shownotes-meta">
+
+				<p><strong>Podcaster</strong>: Tim Pritlove, Holger Klein</p>
+				<form class="podcaster">
+					<input type="text" value="" placeholder="Name" />
+					<input class="small" type="submit" value="Hinzufügen" />
+				</form>
+
+				<hr />
+
+				<form class="shownoter">
+					<input type="submit" value="+" />
+					<p><strong>Shownoter:</strong> Kai, luto, Evita, vale, timpritlove</p>
+				</form>
+
+			</div>
+
+		</div>
+
+		<div class="editor" style="background-color: #eee">
+			Etherpad
+		</div>
+
+	</div>
+
+	<div class="chat">
+
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+
+		<form class="chat-input">
+			<input type="text" value="" placeholder="Nachricht" />
+			<input type="submit" value="Senden" />
+		</form>
+
+	</div>
+
+</div>
