--- a/app/views/livelist.html
+++ b/app/views/livelist.html
@@ -1,8 +1,8 @@
 <h2>Die kollaborative Plattform für Sendungsnotizen</h2>
-<h3>Metadaten-Crowdsourcing</h3>
 
 <div class="box-wrapper">
-	<p>Hier siehst du, welche Podcast-Aufzeichnungen wann beginnen. Um live bei den Sendungsnotizen zu helfen, klicke auf <strong>Erstellen</strong> oder <strong>Mitschreiben</strong>. <a href='/help'>Hast du noch Fragen?</a></p>
+	<h3>Einleitung</h3>
+	<p>Willkommen! Hier siehst du, welche Podcast-Aufzeichnungen wann beginnen.<br />Um live bei den Sendungsnotizen zu helfen, klicke auf <strong>Erstellen</strong> oder <strong>Mitschreiben</strong>. <a href='/help'>Hast du noch Fragen?</a></p>
 </div>
 
 <table class="padlist">
