--- a/app/views/user/pwreset.html
+++ b/app/views/user/pwreset.html
@@ -1,17 +1,15 @@
-<h2>Passwortreset</h2>
-<h3>Fooo</h3>
+<h2>Passwort ändern</h2>
+<h3>Und das nächste Mal einfach merken</h3>
 
-<p>Hallo {{user.username}}!</p>
+<p>Hallo {{user.username}}! Du kannst nun dein Passwort ändern.</p>
 
-<p>Bla foo bla bla</p>
-
-<div class="form-wrapper">
+<div class="box-wrapper">
 	<h3>Passwort ändern</h3>
 
 	<form class="profile-edit">
 		<input type="password" value="" placeholder="Neues Passwort" ng-model="pwreset.password" />
 		<input type="password" value="" placeholder="Neues Passwort bestätigen" ng-model="pwreset.password2" equals="{{upgrade.password}}" />
-		<input type="submit" value="Änderungen speichern" ng-click="sendPwReset()" />
+		<input type="submit" value="Passwort speichern" ng-click="sendPwReset()" />
 		<action-status success-text="Dein Passwort wurde erfolgreich geändert."
 					   fail-text="Bitte überprüfe noch einmal deine Angaben."
 					   active="pwreset.active" status="pwreset.status"></action-status>
