--- a/app/views/document.html
+++ b/app/views/document.html
@@ -42,71 +42,71 @@
 	</div>
 
 	<div class="chat">
-
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
-		<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
-		<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
-
+		<div class="messages">
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Nein!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Doch!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Oh!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Nein!</p>
+			<p style="background-color: #fff8e3"><time>13:37</time><strong>luto:</strong> Doch!</p>
+			<p style="background-color: #c7e6f7"><time>13:37</time><strong>Kai:</strong> Oh!</p>
+		</div>
 		<form class="chat-input">
 			<input type="text" value="" placeholder="Nachricht" />
 			<input type="submit" value="Senden" />
