--- a/app/views/user/profile.html
+++ b/app/views/user/profile.html
@@ -5,7 +5,7 @@
 
 
 <div class="box-wrapper">
-	<h3>Beschreibung & Farbe</h3>
+	<h3>Beschreibung &amp; Farbe</h3>
 
 	<p>Diese Angaben sind öffentlich einsehbar.</p>
 
