--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -665,6 +665,10 @@ nav li > input {
 	float: right;
 	width: auto;
 }
+.editor > iframe {
+  width: 100%;
+  height: 300px;
+}
 
 /* Chat */
 .chat {
