--- a/app/views/user/profile.html
+++ b/app/views/user/profile.html
@@ -49,7 +49,7 @@
 		<input type="email" value="" placeholder="Neue E-Mail-Adresse" required ng-model="changemail.email" />
 		<input type="password" value="" placeholder="Aktuelles Passwort bestätigen" required ng-model="changemail.password" />
 		<input type="submit" value="E-Mail-Adresse ändern" ng-click="changeMail()" />
-		<action-status  success-text="E-Mail-Adresse erfolgreich geändert."
+		<action-status  success-text="Bitte bestätige deine neue E-Mail-Adresse mit dem Link in deinem Posteingang."
 						fail-text="Bitte überprüfe noch einmal deine Angaben."
 						active="changemail.active" status="changemail.status"></action-status>
 	</form>
