doc view: fix chat time position

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -685,7 +685,7 @@ nav li > input {
 	font-size: .8em;
 	padding: .25em;
 }
-.chat > .messages > time {
+.chat > .messages > p > time {
 	float: right;
 	padding: .25em;
 	opacity: .5;
