doc view: clear podcaster textbox when adding one

--- a/app/views/document.html
+++ b/app/views/document.html
@@ -39,7 +39,7 @@
 				</p>
 				<form class="podcaster">
 					<input type="text" value="" placeholder="Name" ng-model="newpodcaster.name" />
-					<input class="small" type="submit" value="Hinzufügen" ng-click="addPodcaster(newpodcaster)" />
+					<input class="small" type="submit" value="Hinzufügen" ng-click="addPodcaster()" />
 				</form>
 
 			</div>
